クリーンコード書き始め

--- a/public/記事のファイルのベース名.md
+++ b/public/記事のファイルのベース名.md
@@ -1,7 +1,7 @@
 ---
-title: 記事のファイルのベース名
+title: 世界一流エンジニアの思考法を読んで思ったこと！
 tags:
-  - #hoge
+  - #mysql
 private: false
 updated_at: ''
 id: null
@@ -9,6 +9,113 @@ organization_url_name: null
 slide: false
 ignorePublish: false
 ---
-# new article body
+
+初めまして！元公務員エンジニアのガッキーです。
+今回は「世界一流エンジニアの思考法」を読んで学んだことをまとめてみました！
+この本を読んだときは、勤務する受託系企業の案件が炎上していて、
+頭が混乱していたタイミングで「もうどうしたらいいんだ！」となっている時で
+本書を読んで色々と救われた気分になりました。
+
+特に印象に残っている３つまとめてみました！
+
+# 1.Be Lazy 怠惰であれ！👌
+
+第2章 「アメリカで見つけたマインドセット」に書かれている内容で、
+怠惰を日本語に直訳すると「すべきことを怠ける様子」という意味ですが
+アメリカの使われ方としては「より少ない時間で価値を出す」考え方だそうです。
+
+具体的なところでいうと、
+
+### 「優先順位の考え方」
+
+ここに大きな違いがありました。
+日本の優先順位の考え方は１～５あるタスクの重要なタスクから順番を決めて作業をします。
+一方アメリカの優先順位の考え方では最重要である1つ決めて他はやらない。
+このように不要なタスクはバサバサ切っていくそうです。
+
+### 「時間の使い方」
+
+アメリカの考え方では作業時間を固定して価値を最大化させることにあります。
+日本のあれもこれも「すべき」マインドだと、あーこれもあれも・・・と時間が伸びてしまう傾向がありますが、アメリカでは決められた作業時間のなかで価値を生み出すことにフォーカスするため、
+今日はこの「２つ」限られた時間で作業しようというマインドです。
+
+# 2.脳の負荷を減らす🧠
+
+エンジニアの仕事・・・頭使いますよね！？
+僕はエンジニア2年目ですが日々脳がパンパンになる感覚があります！
+
+僕は書店で目次の中に「脳の負荷」を減らすと見かけて、この本を購入しました！
+
+具体的に紹介されている手法を見ていきましょう！
+
+### コードリーディングは極力読まないこと
+
+牛尾さんも当初は、プログラムを理解するため端から端まで実装を読んでいたそうですが、
+脳疲労を感じるわりに頭に入らないことを感じていたそうです。
+技術イケメンのアドバイスは、プログラムはきちんと実装されていることを信じ。
+「極力読まないようにして構造を理解する」というものでした。
+
+他にも
+
+### マルチタスクはしない
+
+これはギクッとするひとことで、マルチしまくりでした。
+例えば、
+- ひとつのタスクが割り振られたら、他のコードやバグが気になり、別のコード修正をしている
+- エラーをネットで検索していたら気づいたらネットサーフィンしていた
+- 会議中にタスクをこっそり進めていた
+
+マルチタスクは生産性をかなり下げることが、色々な研究で証明されていて、
+対策として、
+
+- 今手を付けている作業を１つに限定する
+- ３０分から１時間は、そのことのみに集中する
+- 終わったタスクに関係するブラウザのタブは閉じる
+
+これらが有効であるということが書かれていました！
+
+
+またほかにも脳の負荷を減らすために
+
+- 瞑想をする
+- ディスプレイから離れる
+- しっかりと睡眠をとる
+
+など実践されているそうです！
+
+# 3.不確実性を受け入れる😕
+
+第2章に書かれている内容でシステム開発は、
+予定どおりにいくことがまず無い！と書かれています。
+
+- 「納期絶対の神話は捨てる」
+
+システム開発は炎上したり不具合がみつかったりと
+実際に見積もったバッファ30％を超えることはよくあること！
+
+これを目にした僕は「これだよ！！」と感じて
+まさに炎上している案件は確実に納期に間に合わないし、
+見積を大幅に超えて、進めれば進めるほど「コレもやらなきゃ」なんて課題が増える一方でした！
+
+**さて、じゃあどうすればいいか。**
+
+> 納期を固定したまま、提供する物量を調節することがベスト間に合わないものは次に回すか、やめる。
+
+このような策を提案されています。
+
+システム開発には「予定どおりにいくことがない」という言葉はハッとさせれらました。
+異業種から転職してきた自分は常にシステムが仕様通り、確実にクリアしていくべきという意識で仕事していたので、バグや大きな遅延が起きるといつもハラハラしていました。僕が努めているお客さんに納期の約束をしている、受託系企業ではこの課題にどのようにアプローチしていくか深堀が必要だと感じました。
+
+# まとめ🖊️
+
+ご覧いただきありがとうございました！
+本書を読んで、書ききれないほどの学びがたくさんあったのですが、
+じゃあ具体的に何やろうか？
+と考えたときに受託系企業だとハードル高いななんて感じることも多々ありました。
+
+なので僕はとりあえず同僚に**本書を読むこと勧める**というアクションをとることをしました！笑
+
+何か気になる点や、おかしな点ありましたらお気軽にコメントください！
+
 
 
