クリーンコード書き始め

--- a/public/クリーンコード.md
+++ b/public/クリーンコード.md
@@ -12,4 +12,74 @@
 - コードリーディングが短くなる
 - 新規追加がしやすく、修正によるバグが混入しにくい
 
+
+# 命名
+
+単語は2～3つまでに収める
+get,set
+
+## 変数
+
+変数　（形容詞）＋名詞
+
+単数・複数系の使い分け注意
+
+キャメルケースを使用
+
+serviceName
+
+## 真偽値
+is,has,can
+直感で分かりやすい
+
+
+
+## 関数
+
+動詞＋（名詞）
+
+取得の時はgetを付けると直感で分かりやすい。
+
+
+
+
+bad
+```javascript
+function calculation(number) {
+  return number * 2;
+}
+```
+
+
+good
+
+```javascript
+function getDoubleNum(number) {
+  return number * 2;
+}
+```
+
+
+
+# クラス
+形容詞＋名詞
+パスカルケース PurchaseHistory
+
+```js
+class Person {
+  printPersonProfiles() {}
+}
+```
+
+### Good
+
+```js
+class Person {
+  //  personのメソッドなので、Person は不要
+  printProfiles() {}
+}
+```
+
+冗長は防ぐ
+
 # callbackでまとめる
