サブスク記事投稿

--- a/public/クリーンコード.md
+++ b/public/クリーンコード.md
@@ -61,7 +61,7 @@ function getDoubleNum(number) {
 
 
 
-# クラス
+## クラス
 形容詞＋名詞
 パスカルケース PurchaseHistory
 
@@ -81,5 +81,7 @@ class Person {
 ```
 
 冗長は防ぐ
+
+# コメント
 
 # callbackでまとめる
