DRYしないほうがいいケース

--- a/public/クリーンコード.md
+++ b/public/クリーンコード.md
@@ -84,4 +84,31 @@ class Person {
 
 # コメント
 
+## 悪いコメント
+
+当たり前のことは書かない
+
+## いいコメント
+正規表現
+
+# 関数
+
+## DRYしないほうがいいケース
+
+目的が違う、下記は似ているが目的が違うので共通化するべきでない
+
+```js
+// 税込み金額
+function getTotalWithTAX(amount) {
+  const TAX = 0.1;
+  return amount + amount * TAX;
+}
+
+// 支払い違反金
+function getTotalWithPenalties(amount) {
+  const PENALTY = 0.1;
+  return amount + amount * PENALTY;
+}
+```
+
 # callbackでまとめる
