--- a/public/コメント.md
+++ b/public/コメント.md
@@ -32,6 +32,8 @@ if ($user->age < 18 && $user->is_member){
 }
 できるだけコードで表現する
 
+
+```php
 function isMinorMember($age, $isMember) {
     // 未成年の定義を18歳未満とする
     $isMinor = $user->age < 18;
@@ -40,25 +42,10 @@ function isMinorMember($age, $isMember) {
     // 未成年かつメンバー会員であるかを判定
     return $isMinor && $isMember;
 }
-
-
-
-
-```js
-const isThirties = 30 <= age && age <= 39;
-const isTechnicalJob = occupation === 1;
-const isSixMillionYenOrMore = 600 <= salary;
-const livingInTokyo = prefecture === 13;
-
-const isTarget =
-  isThirties && isTechnicalJob && isSixMillionYenOrMore && livingInTokyo;
-
-if (isTarget) {
-  return true;
-} else {
-  return false;
-}
 ```
+
+
+
 
 
 
@@ -73,13 +60,16 @@ if (type.CLEAR === action) {
 ## いいコメント
 正規表現
 
-まわりくどいコードになっている、煩雑になっているコードの意図を表現
+## まわりくどいコードになっている、煩雑になっているコードの意図を表現
 
 
 ```php
 
 
-unset($params['qualifications_staffs'][$entQualification->id]);
+// 未成年会員への通知は行わない
+if (isMinorMember($age, $isMember)){
+  unset($params['notify']);
+}
 
 ```
 
@@ -88,3 +78,18 @@ unset($params['qualifications_staffs'][$entQualification->id]);
 PHPDoc
 使用上の注意
 コードで表現できないことを書く
+
+```php
+
+	/**
+	 * 有効なユーザーを取得するためのクエリ
+	 *   の結合を行なうクエリとなっています。
+	 * @param Query|Staffs $query
+	 * @param array $params 条件絞込むためのパラメーター
+	 * @return Query
+	 */
+	public function findEnabledUsers( $query, $params ){
+
+  ```
+
+  https://qiita.com/kouki_o9/items/49d34d347bde730f4a30
