テストコード記事完了

--- a/public/07_テストコード.md
+++ b/public/07_テストコード.md
@@ -1,14 +1,19 @@
-- テストコードのメリット
+
+# テストコードとは？
+
+プログラムの動作を検証するために書かれるコードのこと！
+
+# テストコードのメリット
 
 - バグ検知
     - コードに潜むバグの検知を早期に発見できます
 - 関数の動作を表現できる
-    - テストコードが使用方法を示すドキュメントになります
+    - テストコード自体が関数の使用方法を示すドキュメントになります
 - リファクタリングの安全性確保
     - 他メンバーがコードを修正する際にもテストが通ることで品質が保証されます、仮にテストコードが無いと影響がどこまで影響範囲があるのか確認しなければなりません
 
 
-- テストの種類
+# テストの種類
 
 - 単体（ユニット）テスト
     - 関数単位で正しく動作するか確認します
@@ -35,14 +40,26 @@
 
 ここからは実際にPHPのテストコードを見ていきましょう！
 
-# PHPでテストを行う手順
-
-
-
-##　PHPUnitをインストールする！
+# PHPでテストコードを書いてみる⚡
 
 PHPのテストではPHPUnitというテストフレームワークを使用します。
 PHPUnitを使用するために必要なComposerのインストールからPHPUnitを使った簡単なテストの実行までの手順を紹介します。
+
+作成していくテスト用のファイル構成はこのような形です。
+
+```
+project/
+├── phpUnit/
+│   ├── vendor/
+│   │   └── bin/
+│   │       └── phpunit
+│   └── tests/
+│       └── CalculatorTest.php
+└── Calculator.php
+```
+
+
+早速必要ライブラリとファイルを作成していきましょう！！
 
 ### 1. Composerのインストール
 
@@ -86,25 +103,56 @@ testsフォルダを作成しなかにCalculatorTest.phpを作成します。
 ```php
 
 use PHPUnit\Framework\TestCase;
-    require_once DIR . '/../Calculator.php'; // 追加
-    class CalculatorTest extends TestCase {
+require_once DIR . '/../Calculator.php';
+
+class CalculatorTest extends TestCase {
+
     public function testAdd() {
-    // Arrange: テストの準備
-    $calculator = new Calculator();
-    // Act: 実際の操作
-    $result = $calculator->add(2, 3);
-    // Assert: 結果の検証
-    $this->assertEquals(5, $result);
+        // Arrange: テストの準備
+        $calculator = new Calculator();
+        // Act: 実際の操作
+        $result = $calculator->add(2, 3);
+        // Assert: 結果の検証
+        $this->assertEquals(5, $result);
     }
+
 }
 ```
 
 ### 5. テストの実行
-以下のコマンドでテストを実行します。
+以下のコマンドでテストを実行すると
 
 ```bash
 vendor/bin/phpunit tests/CalculatorTest.php
+```
+このようなテスト結果が表示されます。
+
+```bash
+# PHPUnitのバージョン
+PHPUnit 10.5.30 by Sebastian Bergmann and contributors.
+
+# テストが実行されたPHPのバージョン
+Runtime:       PHP 8.1.24
+
+# テストが1つ実行され成功しています
+1 / 1 (100%)
+
+# テストの実行時間とメモリ使用量
+Time: 00:00.006, Memory: 6.00 MB
+
+# １つのテスト１つのアサーション（検証）が行われたことを示しています。
+OK (1 test, 1 assertion)
 
 ```
+
+# まとめ🖊️
+
+ご覧いただきありがとうございました！
+業務でテストコードを書く文化が無いため（涙
+
+テストプロジェクトを作ってアウトプットしてみました。
+次は実際にDBの値なんかもテストしてみたいと思います。
+
+何か気になる点や、おかしな点ありましたらお気軽にコメントください！
 
 
