--- a/public/08_正規化.md
+++ b/public/08_正規化.md
@@ -1,6 +1,6 @@
 # 正規化とは？
 
-データベース設計においてデータの冗長性を排除して一貫性を保つこと。
+データベース設計においてデータの**冗長性**を排除して**一貫性**を保つこと。
 
 正規化をすることでデータの重複を減らし、データの更新・削除・挿入時のエラーを防ぐことができます。
 
@@ -161,6 +161,17 @@
 | 2      | 鈴木一郎 | 22   | 20     |
 | 3      | 佐藤花子 | 21   | 10     |
 ```
+
+# まとめ🖊️
+
+ご覧いただきありがとうございました！
+何気なく正規化を理解したまま進んできてしまっていたため
+改めて復習もかねて記事にしてみました！
+
+関数従属について理解が深まった点が良かったと思います。
+また冗長であるデータ構成が、なぜいけないのかも復習できてよかったです！
+
+何か気になる点や、おかしな点ありましたらお気軽にコメントください！
 
 
 
